fix(textfield): add visible border in contrast mode

--- a/packages/components/src/textfield/TextField.module.css
+++ b/packages/components/src/textfield/TextField.module.css
@@ -101,6 +101,10 @@
   width: 100%;
   min-height: var(--midas-size-150);
 
+  @media (forced-colors: active) {
+    border: 1px solid;
+  }
+
   &[data-hovered] {
     background-color: var(--midas-field-01-hover);
 
@@ -121,6 +125,10 @@
   &[data-invalid] {
     border: none;
     box-shadow: inset 0 0 0 2px var(--midas-support-border-warning);
+
+    @media (forced-colors: active) {
+      border: 1px solid;
+    }
   }
 
   &[data-disabled] {
@@ -128,6 +136,10 @@
     background-color: var(--midas-field-disabled);
     border: none;
     border-bottom: 1px solid var(--midas-border-color-disabled);
+
+    @media (forced-colors: active) {
+      border: 1px solid;
+    }
   }
 }
 
